--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/logo-adventista-preto.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Adventista Play - Plataforma completa de estudos bíblicos, devocionais, hinário e recursos adventistas. Estude a Bíblia, leia devocionais diários e cresça espiritualmente." />
     <meta name="theme-color" content="#2563eb" />
@@ -29,10 +29,10 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Icons -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512x512.png" />
+    <link rel="apple-touch-icon" href="/logo-adventista-preto.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo-adventista-preto.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/logo-adventista-preto.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/logo-adventista-preto.png" />
     
     <title>Adventista Play - Devocional, Hinário, Bíblia e Estudos</title>
   </head>
